--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,7 @@ edition = "2021"
 
 [dependencies]
 cargo-snippet = "0.6"
+itertools = "0.13.0"
+proconio = "0.5.0"
+rand = "0.8.5"
+rand_pcg = "0.3.1"
